[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olm-mas"
version = "0.1.0"
description = "Orchestrator-Local Memory for Multi-Agent Systems – research MVP"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
olm-mas = "olm_mas.cli:main"
